add logout function, remove phone from user details
