# services/server/database/seeders/UserSeeder.php
@@ -20,7 +20,6 @@ class UserSeeder extends Seeder
             'uuid' => Str::uuid(),
             'email' => 'ofirgoldofir@gmail.com',
             'full_name' => 'Ofir Goldberg',
-            'phone_number' => '052-7576444',
             'password' => Hash::make('Aa123!@#'),
         ]);
     }
