# services/server/storage/api-docs/api-docs.json
@@ -22,7 +22,6 @@
                                 "required": [
                                     "email",
                                     "full_name",
-                                    "phone_number",
                                     "password"
                                 ],
                                 "properties": {
@@ -33,10 +32,6 @@
                                     "full_name": {
                                         "type": "string",
                                         "example": "Ofir Goldberg"
-                                    },
-                                    "phone_number": {
-                                        "type": "string",
-                                        "example": "0527576444"
                                     },
                                     "password": {
                                         "type": "string",
@@ -102,6 +97,27 @@
                     },
                     "500": {
                         "description": "An error occurred while user logged in"
+                    },
+                    "204": {
+                        "description": "No content"
+                    }
+                }
+            }
+        },
+        "/api/logout": {
+            "post": {
+                "tags": [
+                    "Authentication"
+                ],
+                "summary": "Logout user",
+                "description": "Logout the authenticated user by revoking the user's access token",
+                "operationId": "logout",
+                "responses": {
+                    "200": {
+                        "description": "User logged out successfully"
+                    },
+                    "500": {
+                        "description": "An error occurred while logging out"
                     },
                     "204": {
                         "description": "No content"
